tests/ui/binop/multiply-is-deref-on-rhs.rs
pub fn test(y: &i32) {
    let x;
    x = ()
    *y
    //~^ ERROR cannot multiply `()` by `&i32`
}

fn main() {}
